tests/ui/issues/issue-21554.stderr
error[E0606]: casting `fn(i32) -> Inches {Inches}` as `f32` is invalid
  --> $DIR/issue-21554.rs:4:5
   |
LL |     Inches as f32;
   |     ^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0606`.
